[package]
name = "async-tw-econ"
version = "0.6.0"
edition = "2021"

[dependencies]
# Only needed for async_std support
async-std = { version = "1.8.0", optional = true }

# Only needed for tokio support
tokio = { version = "1", features = ["net", "io-util"], optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
