[package]
name = "async-tw-econ"
version = "0.7.0"
edition = "2021"

[dependencies]
# Only needed for async_std support
async-std = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

# Only needed for tokio support
tokio = { version = "1", features = ["net", "io-util"], optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
async-std = ["dep:async-std", "dep:futures"]
